corpus/c/syntax/case-02/snapshots/gcc15/render.concise.txt
error: [syntax] syntax error @ src/main.c:2:17
help: fix the first parser error at the user-owned location
want: expression
near: ; token
| src/main.c:2:17
|     int value = ;
|                 ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output